# gnu_linux_config_wizard

./: CMakeLists.txt  README.md
configs/: .vimrc  iptables_cfg.txt  settings.json  zram_cfg.txt
doc/: CODESTYLE.rst  CONTRIBUTING.rst
src/: linux_setup.c  linux_setup.h  main.c
